<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="org.udg.pds.cheapyandroid.fragment.EditarProductePerfilVenda">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:layout_below="@+id/layout_boton_desar">
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_nom_producte"
                    android:ems="10"
                    android:id="@+id/et_nom_producte"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_desc_producte"
                    android:ems="10"
                    android:id="@+id/et_desc_producte"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_preu_producte"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/et_preu_producte"/>
            <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinner_categoria"/>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:padding="16dp"
                    android:layout_height="wrap_content">
                <CheckBox
                        android:text="@string/hint_preu_negociable"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/cb_preu_negociable" android:layout_weight="1"/>
                <CheckBox
                        android:text="@string/hint_intercanvi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/cb_intercanvi" android:layout_weight="1"/>
            </LinearLayout>
            <TextView
                    android:id="@+id/tv_error_falten_camps_desar_canvis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorRed"
                    android:text="@string/error_falten_camps_desar_canvis"
                    android:layout_marginTop="32dp"
                    android:textAlignment="center"/>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom" android:gravity="bottom">
                <Button
                        android:text="@string/button_desar_canvis"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimary"
                        android:textColor="@color/colorWhite"
                        android:id="@+id/button_publicar"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
