<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_item_nou_producte"
                android:icon="@mipmap/ic_add_circle_white_24dp"
                android:tint="@color/colorPrimary"
                android:visible="false"
                android:title="@string/navmenu_item_nou_producte" />
        <item
                android:id="@+id/nav_item_llista_productes"
                android:icon="@mipmap/ic_view_list_white_24dp"
                android:tint="@color/colorPrimary"
                android:title="@string/navmenu_item_llista_productes" />
        <item
                android:id="@+id/nav_item_perfil"
                android:icon="@mipmap/ic_account_circle_white_24dp"
                android:tint="@color/colorPrimary"
                android:visible="false"
                android:title="@string/navmenu_item_perfil" />
        <item
                android:id="@+id/log_out"
                android:visible="false"
                android:tint="@color/colorPrimary"
                android:icon="@mipmap/ic_power_settings_new_white_24dp"
                android:title="Log Out"/>
    </group>
</menu>